--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.27.0",
     "axios": "^1.11.0",
     "lodash.debounce": "^4.0.8",
+    "mime-types": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.1"
@@ -23,6 +24,7 @@
     "@crxjs/vite-plugin": "2.0.3",
     "@eslint/js": "^9.30.1",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^24.2.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
